# MatroideArgus

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/app/: main.py
backend/app/api/v1/: __init__.py
backend/app/core/: config.py
backend/app/db/: session.py
backend/app/models/: __init__.py  audit_log.py  base.py  model_registry.py
backend/tests/: test_health.py
docker/: Dockerfile.api  docker-compose.yml
infra/db/clickhouse/: init.sql
infra/db/migrations/: alembic.ini  env.py
sdk/: README.md  pyproject.toml
sdk/src/meridian_sdk/: buffer.py  client.py  config.py
sdk/src/meridian_sdk/cli/: main.py
