[project]
name = "meridian"
version = "0.1.0"
description = "Meridian AI Ops & Governance Platform"
requires-python = ">=3.12"

[tool.uv]
managed = true

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv.sources]
meridian-sdk = { workspace = true }
meridian-api = { workspace = true }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "httpx>=0.27",
    "ruff>=0.8",
    "mypy>=1.20.0",
    "pre-commit>=4.0",
]
