[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "meridian-sdk"
version = "0.1.0"
description = "Meridian SDK — Instrument ML models for observability, explainability, and compliance"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "Matroide", email = "engineering@matroide.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
sklearn = ["scikit-learn>=1.0"]
pytorch = ["torch>=2.0"]
tensorflow = ["tensorflow>=2.12"]
xgboost = ["xgboost>=1.7"]
huggingface = ["transformers>=4.30"]
all = [
    "scikit-learn>=1.0",
    "torch>=2.0",
    "tensorflow>=2.12",
    "xgboost>=1.7",
    "transformers>=4.30",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
    "mypy>=1.0",
    "ruff>=0.1.0",
]

[project.scripts]
meridian = "meridian_sdk.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/meridian_sdk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true

[tool.coverage.run]
source = ["meridian_sdk"]

[tool.coverage.report]
fail_under = 80
